src/objects/Point__c.object
<CustomObject>
    <description>Initially, the Point object is populated from an embedded Factory class that generates and stores a sample set of Review Points. Larger sets of Review Points can be imported via the Apex Data Loader.</description>
    <fields>
        <fullName>Correct1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether Option1 is a correct choice.</description>
        <label>Correct1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether Option2 is correct</description>
        <label>Correct2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether Option3 is correct.</description>
        <label>Correct3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exercise__c</fullName>
        <description>Text to present for the multiple-choice format.</description>
        <label>Exercise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Direct hyperlink to the nearest location of the underlying Source materials available to a web browser.</description>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>Each point is related to a specific Review Module, indicated by a plain text key, like “X1 - Sales Cloud Consultant”. The initial prefix is designed to help with auto-complete when authoring points in Excel and to simplify creating third party modules. More detail is provided in the Researchers Guide.</description>
        <label>Review Module</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <description>Each point is related to a specific Exam Objective, indicated by a plain text key like “Implementation Strategies”. The Exam Objectives are derived from the Study Guides, and documented in the Reseachers Guide.</description>
        <label>Exam Objective</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option1__c</fullName>
        <description>Text for an option.</description>
        <label>Option1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option2__c</fullName>
        <description>Text for an option.</description>
        <label>Option2</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option3__c</fullName>
        <description>Text for an option.</description>
        <label>Option3</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Each point is derived from a Authoritative Resource that is available as a publicly accessible web document.</description>
        <label>Authoritative Resource</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The earliest known Salesforce version number where the functionality underlying the review point was available.</description>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Point</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>